# openhands-ide-bridge

./: LICENSE  README.md  configure.py  llm_proxy.py  openhands_mcp.py  pyproject.toml
.agents/: AGENTS.md
